...
        android:layout_marginTop="8dp"
        android:text="What's your name?"
        app:layout_constraintStart_toStartOf="@+id/intro_welcome_text"
        app:layout_constraintTop_toBottomOf="@+id/intro_welcome_text" />

    <EditText
        android:id="@+id/intro_name_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
...
        android:inputType="text|textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro_welcome_text" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/intro_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
...
