<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_notification_item"
        android:title="Notifications"
        android:icon="@drawable/baseline_notifications_24"
        app:showAsAction="always"/>
</menu>