...
            android:layout_height="wrap_content"
            android:text="CANCEL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="64dp"/>
    <EditText
            android:id="@+id/edit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="Name/Last Name"
            app:layout_constraintEnd_toEndOf="parent"
...
